--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,10 +19,11 @@
      <mat-form-field class="full-width" appearance="fill">
         <mat-label>Senha</mat-label>
         <input  
-        [formControl]="email"
+        [formControl]="senha"
         required
         [(ngModel)]="creds.senha" 
-        name="senha"type="password" 
+        name="senha" 
+        type="password" 
         matInput 
         placeholder="Ex. 123">
      </mat-form-field>
