--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -3,37 +3,38 @@
         <H1 class="fullWidth">Cadastrar Tecnico</H1>
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="help-desk - dicas de um DEV">
         <section class="section">
-            <mat-checkbox class="margin">Admin</mat-checkbox>
-            <mat-checkbox class="margin">Cliente</mat-checkbox>
-            <mat-checkbox class="margin">Tecnico</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Admin</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Cliente</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Tecnico</mat-checkbox>
           </section>
       
           <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Nome</mat-label>
-            <input matInput placeholder="ex. Marcelo">
+            <input [formControl]="nome" required matInput placeholder="ex. Marcelo">
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
           </mat-form-field>
 
           <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>CPF</mat-label>
-            <input matInput placeholder="Ex. 000.000.000-00">
+            <input [formControl]="cpf" required matInput placeholder="Ex. 000.000.000-00" mask= "000.000.000-00">
+            
             <mat-icon matSuffix>pin</mat-icon>
           </mat-form-field>
 
           <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>E-mail</mat-label>
-            <input matInput placeholder="Ex. nome@mail.com">
+            <input [formControl]="email" required matInput placeholder="Ex. nome@mail.com">
             <mat-icon matSuffix>email</mat-icon>
           </mat-form-field>
 
           <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput placeholder="******">
+            <input [formControl]="senha" required type="password" matInput placeholder="******">
             <mat-icon matSuffix>password</mat-icon>
           </mat-form-field>
 
-          <button class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
-          <button class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+          <button [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
+          <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
     <p class="fullWidth">by Raytsson Moraes</p>
