--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
@@ -19,3 +19,11 @@ table {
     text-align: center;
     margin-bottom: 2rem;
   }
+
+  .edit {
+    color: rgb(3, 65, 233);
+  }
+
+  .delete {
+    color: red;
+  }
