--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -1,1 +1,60 @@
-<p>chamado-create works!</p>
+<div class="container mat-elevation-z8">
+    <h1 class="full-width">Criando Chamado</h1>   
+    <img class="full-width" src="assets/img/chamado-create.svg" alt="Chamado image">
+
+    <form class="form">
+        <mat-form-field class="full-width" appearance="outline">
+          <mat-label>Titulo do chamado</mat-label>
+          <input matInput placeholder="Ex. Trocar bateria do notebook">
+        </mat-form-field>
+      </form>
+      
+      <div class="status-prioridade">
+          <mat-form-field appearance="outline">
+            <mat-label>Selecione um status</mat-label>
+            <mat-select>
+              <mat-option value="0">Aberto</mat-option>
+              <mat-option value="1">Em andamento</mat-option>
+              <mat-option value="2">Encerrado</mat-option>
+            </mat-select>
+          </mat-form-field>
+          
+          <mat-form-field appearance="outline">
+            <mat-label>Selecione uma prioridade</mat-label>
+            <mat-select>
+              <mat-option value="0">Baixa</mat-option>
+              <mat-option value="1">Media</mat-option>
+              <mat-option value="2">Alta</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="tecnico">
+            <mat-form-field class="full-width" appearance="outline">
+                <mat-label>Selecione um Tecnico</mat-label>
+                <mat-select>
+                  <mat-option value="0">Valdir</mat-option>
+                </mat-select>
+              </mat-form-field>
+        </div>
+        <div class="cliente">
+            <mat-form-field class="full-width" appearance="outline">
+                <mat-label>Selecione um cliente</mat-label>
+                <mat-select>
+                  <mat-option value="0">Alber einstein</mat-option>
+                </mat-select>
+              </mat-form-field>
+        </div>
+
+        <form class="form">  
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Deixe uma descrição</mat-label>
+              <textarea class="textarea" matInput placeholder="Ex. trocar bateria de notebook queimada..."></textarea>
+            </mat-form-field>
+        </form>
+
+        <button class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+        <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+
+        <p class="full-width">Desnvolvido por Raytsson Moraes</p>
+</div>
