--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -6,6 +6,8 @@
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Titulo do chamado</mat-label>
           <input
+          [(ngModel)]="chamado.titulo"
+          name="titulo"
           [formControl]="titulo"
           required
           matInput
@@ -16,7 +18,9 @@
       <div class="status-prioridade">
           <mat-form-field appearance="outline">
             <mat-label>Selecione um status</mat-label>
-            <mat-select [formControl]="status" required>
+            <mat-select [(ngModel)]="chamado.status"
+            name="status"
+            [formControl]="status" required>
               <mat-option value="0">Aberto</mat-option>
               <mat-option value="1">Em andamento</mat-option>
               <mat-option value="2">Encerrado</mat-option>
@@ -25,7 +29,9 @@
           
           <mat-form-field appearance="outline">
             <mat-label>Selecione uma prioridade</mat-label>
-            <mat-select [formControl]="prioridade" required>
+            <mat-select [(ngModel)]="chamado.prioridade"
+            name="prioridade"
+            [formControl]="prioridade" required>
               <mat-option value="0">Baixa</mat-option>
               <mat-option value="1">Media</mat-option>
               <mat-option value="2">Alta</mat-option>
@@ -36,28 +42,34 @@
         <div class="tecnico">
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Selecione um Tecnico</mat-label>
-                <mat-select [formControl]="tecnico" required>
-                  <mat-option value="0">Valdir</mat-option>
+                <mat-select [(ngModel)]="chamado.tecnico"
+                name="tecnico"
+                [formControl]="tecnico" required>
+                  <mat-option *ngFor="let tec of tecnicos" value="{{ tec.id }}">{{ tec.nome }}</mat-option>
                 </mat-select>
               </mat-form-field>
         </div>
         <div class="cliente">
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Selecione um cliente</mat-label>
-                <mat-select [formControl]="cliente" required>
-                  <mat-option value="0">Alber einstein</mat-option>
+                <mat-select [(ngModel)]="chamado.cliente"
+                name="cliente"
+                [formControl]="cliente" required>
+                  <mat-option *ngFor="let cli of clientes" value="{{ cli.id }}">{{ cli.nome }}</mat-option>
                 </mat-select>
               </mat-form-field>
         </div>
 
         <form class="form">  
             <mat-form-field class="full-width" appearance="outline">
-              <mat-label>Deixe uma descrição</mat-label>
-              <textarea [formControl]="descricao" required class="textarea" matInput placeholder="Ex. trocar bateria de notebook queimada..."></textarea>
+              <mat-label>Deixe uma observação</mat-label>
+              <textarea [(ngModel)]="chamado.observacoes"
+              name="observacoes"
+              [formControl]="observacoes" required class="textarea" matInput placeholder="Ex. trocar bateria de notebook queimada..."></textarea>
             </mat-form-field>
         </form>
 
-        <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+        <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
         <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
         <p class="full-width">Desnvolvido por Raytsson Moraes</p>
