--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -17,7 +17,7 @@
       
       <div class="status-prioridade">
           <mat-form-field appearance="outline">
-            <mat-label>{{ retornaStatus(chamado.status) }}</mat-label>
+            <mat-label>STATUS ({{ retornaStatus(chamado.status) }})</mat-label>
             <mat-select [(ngModel)]="chamado.status"
             name="status"
             [formControl]="status" required>
@@ -28,7 +28,7 @@
           </mat-form-field>
           
           <mat-form-field appearance="outline">
-            <mat-label>{{retornaPrioridade(chamado.prioridade)}}</mat-label>
+            <mat-label>PRIORIDADE ({{retornaPrioridade(chamado.prioridade)}})</mat-label>
             <mat-select [(ngModel)]="chamado.prioridade"
             name="prioridade"
             [formControl]="prioridade" required>
@@ -41,7 +41,7 @@
 
         <div class="tecnico">
             <mat-form-field class="full-width" appearance="outline">
-                <mat-label>{{ chamado.nomeTecnico }}</mat-label>
+                <mat-label>TECNICO ({{ chamado.nomeTecnico }})</mat-label>
                 <mat-select [(ngModel)]="chamado.tecnico"
                 name="tecnico"
                 [formControl]="tecnico" required>
@@ -51,7 +51,7 @@
         </div>
         <div class="cliente">
             <mat-form-field class="full-width" appearance="outline">
-                <mat-label>{{ chamado.nomeCliente }}</mat-label>
+                <mat-label>CLIENTE ({{ chamado.nomeCliente }})</mat-label>
                 <mat-select [(ngModel)]="chamado.cliente"
                 name="cliente"
                 [formControl]="cliente" required>
@@ -70,7 +70,7 @@
         </form>
 
         <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
-        <button routerLink="../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+        <button routerLink="../../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
         <p class="full-width">Desnvolvido por Raytsson Moraes</p>
 </div>
