--- a/src/app/components/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/components/cliente/cliente-create/cliente-create.component.html
@@ -8,26 +8,26 @@
             <mat-checkbox (click)="addPerfil(2)" class="margin" color="primary">Cliente</mat-checkbox>
           </section>
       
-          <mat-form-field class="fullWidth" appearance="fill">
+          <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Nome</mat-label>
             <input [(ngModel)]="cliente.nome" name="nome" [formControl]="nome" required matInput placeholder="ex. Marcelo" maxlength="50">
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
           </mat-form-field>
 
-          <mat-form-field class="fullWidth" appearance="fill">
+          <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>CPF</mat-label>
             <input [(ngModel)]="cliente.cpf" name="cpf" [formControl]="cpf" required matInput placeholder="Ex. 000.000.000-00" mask= "000.000.000-00">
             
             <mat-icon matSuffix>pin</mat-icon>
           </mat-form-field>
 
-          <mat-form-field class="fullWidth" appearance="fill">
+          <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>E-mail</mat-label>
             <input [(ngModel)]="cliente.email" name="email" [formControl]="email" required matInput placeholder="Ex. nome@mail.com">
             <mat-icon matSuffix>email</mat-icon>
           </mat-form-field>
 
-          <mat-form-field class="fullWidth" appearance="fill">
+          <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Senha</mat-label>
             <input [(ngModel)]="cliente.senha" name="senha" [formControl]="senha" required type="password" matInput placeholder="******">
             <mat-icon matSuffix>password</mat-icon>
